王福记黑白处理

--- a/src/wangfuji/cart.html
+++ b/src/wangfuji/cart.html
@@ -71,26 +71,8 @@
                 <img src="./images/add.png" />
               </div>
             </div>
-          </li>
-          <li class="list">
-            <div class="left">
-              <label class="check">
-                <input type="checkbox" class="checkbox" />
-                <img src="./images/checkbox_n.png" />
-              </label>
-              <div class="goods">
-                <div class="name">王福记猪肉脯（酥香）</div>
-                <div class="price">￥80.00</div>
-              </div>
-            </div>
-            <div class="right">
-              <div class="operation reduce">
-                <img src="./images/reduce.png" />
-              </div>
-              <span class="num">1</span>
-              <div class="operation add">
-                <img src="./images/add.png" />
-              </div>
+            <div class="del">
+              <img src="./images/del.png" />
             </div>
           </li>
           <li class="list">
@@ -112,6 +94,33 @@
               <div class="operation add">
                 <img src="./images/add.png" />
               </div>
+            </div>
+            <div class="del">
+              <img src="./images/del.png" />
+            </div>
+          </li>
+          <li class="list">
+            <div class="left">
+              <label class="check">
+                <input type="checkbox" class="checkbox" />
+                <img src="./images/checkbox_n.png" />
+              </label>
+              <div class="goods">
+                <div class="name">王福记猪肉脯（酥香）</div>
+                <div class="price">￥80.00</div>
+              </div>
+            </div>
+            <div class="right">
+              <div class="operation reduce">
+                <img src="./images/reduce.png" />
+              </div>
+              <span class="num">1</span>
+              <div class="operation add">
+                <img src="./images/add.png" />
+              </div>
+            </div>
+            <div class="del">
+              <img src="./images/del.png" />
             </div>
           </li>
         </ul>
