--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -8,6 +8,20 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
+  <!--QQ浏览器私有-->
+  <meta name="x5-fullscreen" content="true"><!--全屏模式-->
+  <meta name="x5-orientation" content="landscape"><!--强制横屏-->
+  <meta name="x5-page-mode" content="app"><!--应用模式-->
+  <!--UC浏览器私有-->
+  <meta name="full-screen" content="yes"><!--全屏模式-->
+  <meta name="screen-orientation" content="landscape"><!--强制竖屏-->
+  <meta name="browsermode" content="application"><!--应用模式-->
+  <!--360浏览器-->
+  <meta name="360-fullscreen" content="true"><!--全屏模式-->
+  <!--IOS私有：删除默认的苹果工具栏和菜单栏(即启用WebApp全屏模式)-->
+  <meta name="apple-mobile-web-app-title" content="添加至主屏幕后的标题">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-touch-fullscreen" content="yes">
   <title>奥迪</title>
   <link rel="stylesheet" href="./css/index.css">
   <script>
@@ -130,8 +144,9 @@
     </div> -->
   </div>
   <script src="./js/jquery-1.11.0.min.js"></script>
+  <script src="./js/preloadjs-0.6.2.min.js"></script>
+  <script src="./js/soundjs-0.6.2.min.js"></script>
   <script src="./js/TweenMax.min.js"></script>
-  <!-- <script src="./js/TweenMax.min.js"></script> -->
   <script src="./js/index.js"></script>
 </body>
 
