猪肉脯修改

--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -14,7 +14,7 @@
   <meta name="x5-page-mode" content="app"><!--应用模式-->
   <!--UC浏览器私有-->
   <meta name="full-screen" content="yes"><!--全屏模式-->
-  <meta name="screen-orientation" content="landscape"><!--强制竖屏-->
+  <meta name="screen-orientation" content="landscape"><!--强制横屏-->
   <meta name="browsermode" content="application"><!--应用模式-->
   <!--360浏览器-->
   <meta name="360-fullscreen" content="true"><!--全屏模式-->
