奥迪流程走通

--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -9,15 +9,22 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <!--QQ浏览器私有-->
-  <meta name="x5-fullscreen" content="true"><!--全屏模式-->
-  <meta name="x5-orientation" content="landscape"><!--强制横屏-->
-  <meta name="x5-page-mode" content="app"><!--应用模式-->
+  <meta name="x5-fullscreen" content="true">
+  <!--全屏模式-->
+  <meta name="x5-orientation" content="landscape">
+  <!--强制横屏-->
+  <meta name="x5-page-mode" content="app">
+  <!--应用模式-->
   <!--UC浏览器私有-->
-  <meta name="full-screen" content="yes"><!--全屏模式-->
-  <meta name="screen-orientation" content="landscape"><!--强制横屏-->
-  <meta name="browsermode" content="application"><!--应用模式-->
+  <meta name="full-screen" content="yes">
+  <!--全屏模式-->
+  <meta name="screen-orientation" content="landscape">
+  <!--强制横屏-->
+  <meta name="browsermode" content="application">
+  <!--应用模式-->
   <!--360浏览器-->
-  <meta name="360-fullscreen" content="true"><!--全屏模式-->
+  <meta name="360-fullscreen" content="true">
+  <!--全屏模式-->
   <!--IOS私有：删除默认的苹果工具栏和菜单栏(即启用WebApp全屏模式)-->
   <meta name="apple-mobile-web-app-title" content="添加至主屏幕后的标题">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -69,9 +76,6 @@
     <div class="page0-04">
       <img src="./images/citylight.png" />
     </div>
-    <!-- <div class="page0-05">
-      <img src="./images/flashlight.png" />
-    </div> -->
     <div class="page0-06">
       <img src="./images/light1.png" />
     </div>
@@ -82,9 +86,6 @@
   <!-- page1 -->
   <div class="page page1">
     <div class="page1-00"></div>
-    <!-- <div class="page1-01">
-      <img src="./images/page1-01.png" />
-    </div> -->
     <div class="page1-04">
       <img src="./images/01_car.png" />
       <img src="./images/wheel.png" class="wheel wheel1 rotating" />
@@ -94,7 +95,6 @@
       </div>
     </div>
     <div class="page1-03">
-      <!-- <img src="./images/page1-03.png" /> -->
       <img src="./images/circle.png" class="circle" />
       <img src="./images/wave1.png" class="wave1 active" />
       <img src="./images/wave2.png" class="wave2 active" />
@@ -130,18 +130,72 @@
         <span class="t24">？</span>
       </p>
     </div>
+    <div class="page1-06">
+      <img src="./images/02_text.png" />
+    </div>
   </div>
   <!-- page2 -->
   <div class="page page2">
     <div class="page2-01"></div>
-    <!-- <div class="page2-04">
-      <img src="./images/01_car.png" />
-      <img src="./images/wheel.png" class="wheel wheel1 rotating active" />
-      <img src="./images/wheel.png" class="wheel wheel2 rotating active" />
-      <div class="page2-02">
-        <img src="./images/carlight.png" />
+    <div class="page2-02">
+      <img src="./images/04_text.png" />
+    </div>
+  </div>
+  <!-- page3 -->
+  <div class="page page3">
+    <div class="page3-01">
+      <img src="./images/06_bg.jpg" />
+      <div class="page3-02">
+        <img src="./images/06_car.png" />
+        <img src="./images/page3-03.png" class="page3-03" />
       </div>
-    </div> -->
+    </div>
+    <div class="page3-04">
+      <img src="./images/06_text.png" />
+    </div>
+  </div>
+  <!-- page4 -->
+  <div class="page page4">
+    <div class="page4-01">
+      <img src="./images/07_bg_1.jpg" />
+    </div>
+    <div class="page4-02">
+      <img src="./images/07_car.png" />
+    </div>
+    <div class="page4-03">
+      <img src="./images/07_text1.png" />
+    </div>
+    <div class="page4-04">
+      <img src="./images/07_text2.png" />
+    </div>
+  </div>
+  <!-- page5 -->
+  <div class="page page5">
+    <div class="page5-01">
+      <img src="./images/08_bg.jpg" />
+    </div>
+    <div class="page5-02">
+      <img src="./images/page05-01.png" />
+    </div>
+    <div class="page5-03"></div>
+    <div class="page5-04">
+      <span class="word word1">
+        <span class="j1">奥</span>
+        <span class="j2">迪</span>
+        <span class="j3">汽</span>
+        <span class="j4">车</span>
+        <span class="j5">金</span>
+        <span class="j6">融</span>
+      </span>
+      <span class="word word2">
+          <span class="j7">成</span>
+          <span class="j8">就</span>
+          <span class="j9">无</span>
+          <span class="j10">限</span>
+          <span class="j11">可</span>
+          <span class="j12">能</span>
+      </span>
+    </div>
   </div>
   <script src="./js/jquery-1.11.0.min.js"></script>
   <script src="./js/preloadjs-0.6.2.min.js"></script>
