奥迪优化二'

--- a/src/wangfuji/home.html
+++ b/src/wangfuji/home.html
@@ -170,6 +170,7 @@
   <script>
     (function () {
       $(function () {
+        $(".page1 .links").find(".link").addClass("enter");
         // home
         $(".page1").on("click", ".link1", function () {
           $(".page1").hide();
