--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -62,6 +62,12 @@
       <div class="mod-orient-layer__desc">为了更好的体验，请使用横屏浏览</div>
     </div>
   </div>
+  <!-- loading -->
+  <div class="loading">
+    <div class="word">
+      <span>loading...</span>
+    </div>
+  </div>
   <!-- page0 -->
   <div class="page page0">
     <div class="page0-01">
@@ -168,11 +174,11 @@
     <div class="page4-04">
       <img src="./images/07_text2.png" />
     </div>
-    <div class="page4-05 page5-02">
+    <div class="page4-05">
       <img src="./images/page05-01.png" />
     </div>
-    <div class="page4-06 page5-03"></div>
-    <div class="page4-07 page5-04">
+    <div class="page4-06"></div>
+    <div class="page4-07">
       <span class="word word1">
         <span class="j1">奥</span>
         <span class="j2">迪</span>
@@ -192,7 +198,7 @@
     </div>
   </div>
   <!-- page5 -->
-  <div class="page page5">
+  <!-- <div class="page page5">
     <div class="page5-01">
       <img src="./images/08_bg.jpg" />
     </div>
@@ -218,7 +224,7 @@
         <span class="j12">能</span>
       </span>
     </div>
-  </div>
+  </div> -->
   <script src="./js/jquery-1.11.0.min.js"></script>
   <script src="./js/preloadjs-0.6.2.min.js"></script>
   <script src="./js/soundjs-0.6.2.min.js"></script>
