奥迪优化三

--- a/src/aodi/index.html
+++ b/src/aodi/index.html
@@ -91,7 +91,11 @@
   </div>
   <!-- page1 -->
   <div class="page page1">
-    <div class="page1-00"></div>
+    <!-- <div class="page1-00"></div> -->
+    <div class="page1-001">
+      <img src="./images/02_bg.jpg" />
+    </div>
+    <div class="page1-002"></div>
     <div class="page1-04">
       <img src="./images/01_car.png" />
       <img src="./images/wheel.png" class="wheel wheel1 rotating" />
@@ -142,7 +146,11 @@
   </div>
   <!-- page2 -->
   <div class="page page2">
-    <div class="page2-01"></div>
+    <!-- <div class="page2-01"></div> -->
+    <div class="page2-001">
+      <img src="./images/04_bg.jpg" />
+    </div>
+    <div class="page2-002"></div>
     <div class="page2-02">
       <img src="./images/04_text.png" />
     </div>
